--- a/index.html
+++ b/index.html
@@ -77,28 +77,20 @@
             padding: 20px 5px;
         }
 
-        /* Mobile adjustments */
-        @media (max-width: 480px) {
-            .title {
-                font-size: 20px;
-            }
-            .description {
-                font-size: 14px;
-                margin-bottom: 15px;
-                line-height: 1.6;
-            }
-            .button {
-                padding: 10px 0;
-                font-size: 15px;
-            }
-            .footer {
-                font-size: 11px;
-                line-height: 1.4;
-            }
-            .container {
-                max-width: 90%;
-            }
-        }
+       /* Mobile adjustments for fullscreen */
+@media (max-width: 480px) {
+    body {
+        padding: 0;
+    }
+    .container {
+        max-width: 100vw; /* Fullscreen width */
+        height: 100vh; /* Fullscreen height */
+        margin: 0; /* Remove margin for fullscreen effect */
+        border-radius: 0; /* Remove rounded corners on mobile */
+        padding: 20px; /* Smaller padding on mobile */
+        box-shadow: none; /* Remove shadow for fullscreen effect */
+    }
+}
     </style>
 </head>
 <body>
