--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     }
 }
     </style>
+	<script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=70dd00f2"></script>
 </head>
 <body>
     <div class="container">
