--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
             border-radius: 48px;
         }
         .title {
-            font-size: 24px;
+            font-size: 20px;
             font-weight: bold;
             margin-bottom: 15px;
-            color: #1d1d1d;
-            text-align: center;
+margin-left: 2px;            
+color: #1d1d1d;
+            text-align: left;
         }
         .description {
             font-size: 16px;
@@ -92,7 +93,6 @@
     }
 }
     </style>
-	<script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=70dd00f2"></script>
 </head>
 <body>
     <div class="container">
@@ -101,9 +101,23 @@
             <img src="COVER.jpg" alt="Logo">
         </div>
         
+	<div class="title">
+            A Different Approach to Lasting Longer
+        </div>
+
         <!-- Description Text -->
         <div class="description">
-            Imagine the look in her eyes as she wonders if someone else can give her what you can’t. Act before she walks away for good.
+            Imagine the look in her eyes as she wonders if someone else can give her what you can’t. Act before she walks away for good.<br><br>
+
+I could tell you what you need to know in two sentences, but it wouldn’t make a difference unless you truly understand it and can apply it.<br><br>
+
+When I was younger, lasting in bed was never a problem for me. My experiences were different—I could go for hours, sometimes needing the girl to tell me when she’d had enough. It felt natural. But things changed over time. I went from seeing women as people I wanted to connect with to objects of desire, and suddenly, I couldn’t even make it a minute.<br><br>
+
+During lockdown, I started feeling frustrated, comparing myself, feeling the impact of porn, and wondering why I was struggling with something that used to be easy. I went from wondering why some guys couldn’t last, to experiencing it myself.<br><br>
+
+It was then I realized the answer wasn’t about tricks or techniques, but a shift in my mindset. I looked at it differently. When I thought about how a woman sees intimacy—how she is relaxed, in control, enjoying each moment—I knew I had to approach things like that too. Sex is about being present, not about trying to hit a goal.<br><br>
+
+What changed everything for me wasn’t a tip or a hack, but resetting my mind around intimacy. And that’s what my ebook is all about—a guide to lasting longer by looking at things from a new perspective.
         </div>
         
         <!-- Divider Line -->
