--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ color: #1d1d1d;
     }
 }
     </style>
+
+<script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=70dd00f2"></script>
 </head>
 <body>
     <div class="container">
