--- a/index.html
+++ b/index.html
@@ -93,7 +93,22 @@ color: #1d1d1d;
     }
 }
     </style>
-
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '425482186831625'); // Replace YOUR_PIXEL_ID with your actual Pixel ID
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=425482186831625&ev=PageView&noscript=1"
+/></noscript>
+	
 <script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=70dd00f2"></script>
 </head>
 <body>
