--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@ color: #1d1d1d;
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=425482186831625&ev=PageView&noscript=1"
 /></noscript>
-	
+
+
+<script>
+   fbq('track', 'Purchase', {currency: "EUR", value: 5.00});
+</script>
+
 <script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=70dd00f2"></script>
 </head>
 <body>
