--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ src="https://www.facebook.com/tr?id=425482186831625&ev=PageView&noscript=1"
 
 
 <script>
-   fbq('track', 'Purchase', {currency: "EUR", value: 5.00});
+   fbq('track', 'PageView');
 </script>
 
 <script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=70dd00f2"></script>
