--- a/thank-you.html
+++ b/thank-you.html
@@ -48,6 +48,11 @@
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=425482186831625&ev=PageView&noscript=1"
 /></noscript>
+
+<script>
+   fbq('track', 'Purchase', {currency: "USD", value: 4.99});
+</script>
+
 </head>
 <body>
     <div class="container">
