--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ What changed everything for me wasn’t a tip or a hack, but resetting my mind a
         <div class="divider"></div>
         
         <!-- Buy Button -->
-        <a href="https://buy.stripe.com/eVa17F4Ra5Jwd8c5kk" class="button">BUY NOW FOR $4.99</a>
+        <a href="https://buy.stripe.com/eVa17F4Ra5Jwd8c5kk" class="button" onclick="fbq('track', 'InitiateCheckout');">BUY NOW FOR $4.99</a>
         
         <!-- Footer Text -->
         <div class="footer"><i>* after purchase a PDF file will be immediately sent to your email</i></div>
