--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ setInterval(() => {
     <div class="container">
         <!-- Logo Image -->
         <div class="image">
-            <img src="COVER.jpg" alt="Logo">
+            <img src="COVER.jpg" alt="Logo" width="1080" height="1080">
         </div>
         
 	<div class="title">
