--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             max-width: 100%;
             border-radius: 48px;
         }
+	    
         .title {
             font-size: 20px;
             font-weight: bold;
@@ -162,7 +163,7 @@ setInterval(() => {
     <div class="container">
         <!-- Logo Image -->
         <div class="image">
-            <img src="COVER.jpg" alt="Logo" width="1080" height="1080">
+            <img src="COVER.jpg" alt="Logo" width="100%" height="auto">
         </div>
         
 	<div class="title">
