--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             margin: 20px; /* Added margin for additional white space around the container */
         }
         .image {
-            margin-bottom: 20px;
+	    margin-top: 20px;
+            margin-bottom: 30px;
         }
         .image img {
             width: 100%;
